@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_metric_controller.c,v 1.28 2005-07-27 00:29:22 achu Exp $
+ *  $Id: cerebrod_metric_controller.c,v 1.29 2005-08-05 19:43:31 achu Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -146,8 +146,12 @@ _metric_controller_setup_socket(void)
       goto cleanup;
     }
 
-  /* unlink is allowed to fail */
-  unlink(CEREBRO_METRIC_CONTROL_PATH);
+  /* unlink is allowed to fail in some situations */
+  if (unlink(CEREBRO_METRIC_CONTROL_PATH) < 0)
+    {
+      if (errno != ENOENT)
+        CEREBRO_EXIT(("unlink: %s", strerror(errno)));
+    }
   
   memset(&addr, '\0', sizeof(struct sockaddr_un));
   addr.sun_family = AF_LOCAL;
